test-expected/large/foodatastudio/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: dmdpstu
    foo.com/duversion: 1.5.91-20190924.1569379814245
    foo.com/version: 1.5.91
  labels:
    app.kubernetes.io/name: foodatastudio
    helm.sh/chart: foodatastudio-1.5.91
  name: foodatastudio
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: foodatastudio
  type: ClusterIP
