test-expected/large/foodatastudio/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: dmdpstu
    foo.com/duversion: 1.5.91-20190924.1569379814245
    foo.com/version: 1.5.91
  labels:
    app.kubernetes.io/name: foodatastudio
    helm.sh/chart: foodatastudio-1.5.91
  name: foodatastudio
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /FOODataStudio
    - uri:
        prefix: /FOODataStudio/
    route:
    - destination:
        host: foodatastudio.peekay.svc.cluster.local
